# geo-maps-agents

./: .coveragerc  .env.sample  .gitignore  CHANGELOG.md  DEV_SETUP.md  PR1_COMPLETION_REPORT.txt  PR1_SUMMARY.md  PR2_COMPLETION_REPORT.txt  PR3_COMPLETION_REPORT.txt  PR3_SUMMARY.md  PR5_COMPLETION_REPORT.txt  PR5_SUMMARY.md  PR6_PROGRESS.md  PR6_PROGRESS_UPDATED.md  QUICK_DEV_COMMANDS.md  QUICK_REFERENCE_PR2.md  QUICK_REFERENCE_PR3.md  QUICK_REFERENCE_PR4.md  QUICK_REFERENCE_PR5.md  README.md  SETUP_COMPLETE.md  app.manifest.json  commit_pr1.sh  geotrip_agent.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  verify_pr1.py  verify_pr2.py  verify_pr4.py  verify_pr5.py
.github/workflows/: ci.yml
apps/mcp_server/: main.py
apps/mcp_server/schemas/: models.py
apps/mcp_server/tools/: itinerary.py  places.py  routes.py  spatial.py
apps/widgets/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/widgets/src/: DayTimeline.tsx  H3Heatmap.tsx  IsochroneRings.tsx  PoiClusters.tsx  RefineDots.tsx  RefineOutlines.tsx  RoutePlayback.tsx  bootstrap.ts  styles.css
apps/widgets/src/common/: DeckGoogleMap.tsx
apps/widgets/src/shims/: child_process.ts
configs/: dense-city.yaml  rural.yaml  suburban.yaml  weights.yaml
docs/prs/: PR2_SUMMARY.md  PR4_COMPLETION_REPORT.txt  PR4_SUMMARY.md  PR6_CI_COMPLETE.md  PR6_COMPLETE.md  QUICK_REFERENCE.md  README.md  verify_pr3.py  verify_pr6.py
src/: __init__.py
src/routing/: __init__.py  greedy.py  matrix.py  vrptw.py
src/scoring/: __init__.py  normalization.py  scorer.py  weights.py
src/spatial/: __init__.py  clustering.py  h3_utils.py
src/tools/: __init__.py  config_loader.py  fields.py
tests/: __init__.py  conftest.py  test_actions.py  test_google_api_key_handling.py  test_h3_refine.py  test_hex_score.py  test_integration.py  test_routing.py  test_scoring.py  test_spatial.py
tests/fixtures/: places_api.json  routes_api.json
